--- a/Knots.html
+++ b/Knots.html
@@ -12,9 +12,16 @@
     <img id ="belt 12" src ="Images/squareKnotBelt12.png" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
     <img id ="belt 16" src="Images/squareKnotBelt16.png" alt= "squareKnotBelt">
     <img id ="belt 20" src="Images/squareKnotBelt20.png" alt= "squareKnotBelt">
-    <p><strong> Most commonly square-knot work is generally used in belts and lanwayds.
+    <p><strong> Most commonly square-knot work is used in belts and lanwayds.
       The products can be incredibly fancy or plain depending on taste, but all made with care.
       I make regular 12-line belts of cotton siene and nylon, 16-line belts and larger 20-line belts. For pricing and more sizing information please contact me here.
       The belt buckles are silver or gold colored brass buckles, but custom buckles can be provided as well. These are working, durable belts which are handcrafted for daily use, to ensure you are ordering the correct belt size please refer to the sizing chart.
+      Feeling adventorous? Try making your own square knot here!
       </strong> </p>
   </div>
+
+  <div class = "Boatswain's Lanyards">
+    <img id="lanyard formal wear" sec="Images/formalLanyead" alt="lanyard">
+    <img id="lanyard chief jimmy wear" sec="Images/chiefJimmy" alt="lanyard">
+    <img id="plain lanyard" sec="Images/plainLanyard" alt="lanyard">
+  <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call. 
