secondt knot description added

--- a/Knots.html
+++ b/Knots.html
@@ -24,4 +24,7 @@
     <img id="lanyard formal wear" sec="Images/formalLanyead" alt="lanyard">
     <img id="lanyard chief jimmy wear" sec="Images/chiefJimmy" alt="lanyard">
     <img id="plain lanyard" sec="Images/plainLanyard" alt="lanyard">
-  <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call. 
+  <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call was used aboard ship. We offer three different types; formal wear lanyards, chief-jimmy lanyards, and plain lanyards.
+    These lanyards can be made as simple or elaborate, to know more about pricing and product information please contact me here.
+    </strong></p>
+    
