--- a/Knots.html
+++ b/Knots.html
@@ -8,7 +8,7 @@
 <body>
   <header
   <h1> Knots and Other Products </h1>
-  <div class = "Square knot belts">
+  <div id = "square knots" class = "Square knot belts">
     <img id ="belt 12" src ="Images/squareKnotBelt12.png" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
     <img id ="belt 16" src="Images/squareKnotBelt16.png" alt= "squareKnotBelt">
     <img id ="belt 20" src="Images/squareKnotBelt20.png" alt= "squareKnotBelt">
@@ -20,10 +20,20 @@
       </strong> </p>
   </div>
 
-  <div class = "Boatswain's Lanyards">
-    <img id="lanyard formal wear" sec="Images/formalLanyead" alt="lanyard">
-    <img id="lanyard chief jimmy wear" sec="Images/chiefJimmy" alt="lanyard">
-    <img id="plain lanyard" sec="Images/plainLanyard" alt="lanyard">
+  <div id ="lanyards" class= "Boatswain's Lanyards">
+    <img id="lanyard formal wear" src="Images/formalLanyead" alt="lanyard">
+    <img id="lanyard chief jimmy wear" src="Images/chiefJimmy" alt="lanyard">
+    <img id="plain lanyard" src="Images/plainLanyard" alt="lanyard">
   <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call was used aboard ship. We offer three different types; formal wear lanyards, chief-jimmy lanyards, and plain lanyards.
     These lanyards can be made as simple or elaborate, to know more about pricing and product information please contact me here.
     </strong></p>
+</div>
+
+<div id = "keychains and pouches" class= "Keychains and Pouches">
+  <img id= "keychain" src="Images/keychain" alt="keychain">
+  <img id= "pouches" src="Images/pouches" alt="keychain">
+  <p><strong> Keychains, Knife Lanyards, and Pouches are also available for purchase. Utilizing cotton laid line and polycover/nylon cover line products with superior strength are produced. Due to the color of the product use they can get dirty easily, but throwing the product in a sock in the washer and dryer will clean it right up!
+    The products can be costumized in length and decoration based on buyer preference, to discuss product pricing and specifics contact me here. </strong></p>
+  </div>
+
+  
