--- a/Knots.html
+++ b/Knots.html
@@ -6,9 +6,19 @@
   </head>
 
 <body>
-  <header
+
   <h1> Knots and Other Products </h1>
-  <div class = "Square knot belts">
+
+  <div class="navigation"> <!--navigation for the other pages -->
+    <ul>
+        <ul class="dropdown"> <!--dropdown for the knots and jewelry page -->
+          <li> <a href="index.html"> Knots </a></li>
+          <li> <a href="Jewelry.html"> Jewelry </a></li>
+        </ul>
+      </li>
+      </ul>
+    </div>
+  <div  class = "Square knot belts">
     <img id ="belt 12" src ="Images/squareKnotBelt12.png" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
     <img id ="belt 16" src="Images/squareKnotBelt16.png" alt= "squareKnotBelt">
     <img id ="belt 20" src="Images/squareKnotBelt20.png" alt= "squareKnotBelt">
@@ -20,11 +30,35 @@
       </strong> </p>
   </div>
 
-  <div class = "Boatswain's Lanyards">
-    <img id="lanyard formal wear" sec="Images/formalLanyead" alt="lanyard">
-    <img id="lanyard chief jimmy wear" sec="Images/chiefJimmy" alt="lanyard">
-    <img id="plain lanyard" sec="Images/plainLanyard" alt="lanyard">
+  <div class= "Boatswain's Lanyards">
+    <img id="lanyard formal wear" src="Images/formalLanyead" alt="lanyard">
+    <img id="lanyard chief jimmy wear" src="Images/chiefJimmy" alt="lanyard">
+    <img id="plain lanyard" src="Images/plainLanyard" alt="lanyard">
   <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call was used aboard ship. We offer three different types; formal wear lanyards, chief-jimmy lanyards, and plain lanyards.
     These lanyards can be made as simple or elaborate, to know more about pricing and product information please contact me here.
     </strong></p>
-    
+</div>
+
+<div  class= "Keychains and Pouches">
+  <img id= "keychain" src="Images/keychain" alt="keychain">
+  <img id= "pouches" src="Images/pouches" alt="keychain">
+  <p><strong> Keychains, Knife Lanyards, and Pouches are also available for purchase. Utilizing cotton laid line and polycover/nylon cover line products with superior strength are produced. Due to the color of the product use they can get dirty easily, but throwing the product in a sock in the washer and dryer will clean it right up!
+    The products can be costumized in length and decoration based on buyer preference, to discuss product pricing and specifics contact me here. </strong></p>
+  </div>
+
+<div class ="wheels">
+  <img id="wheel1" src="Images/wheel1" alt="wheel">
+  <img id="wheel2" src="Images/wheel2" alt="wheel">
+  <p><strong> The tradition of coxcombing your helm is an old one, orginally developed to protect the wood from salt and sun on wooden wheels, it is continued on today. Not only does it help with slippery wheels, but can also serve as a decorative feature to enhance the appearance of the cockpit. The wheel size I typically use us 15" destroyer style wheel, but custom sizes can be recommended. I do not work with 32 or 40 inch wheels as they are too pricey!
+    I am available to travel to your location to meet you at your wheel. For product pricing and information please contact me here.
+  </strong></p>
+
+<div class= "Bellropes">
+  <img id="20inchBellRope" src="Images/20inBellRope" alt="bellrope">
+  <img id="10inchBellRope" src="Images/10inBellRope" alt="bellrope">
+  <p><strong> The bell rope is a necessary ancillary to the ship's bell, long considered the "heart of a ship". The bell rope is a symbol of pride in the ship taken by the crew. We offer 20" and 10" bell ropes created to be durable and functional.
+    For product pricing and information please contact me here. </strong></p>
+  </div>
+</body>
+
+</html>
