--- a/Knots.html
+++ b/Knots.html
@@ -6,8 +6,18 @@
   </head>
 
 <body>
-  <header
+
   <h1> Knots and Other Products </h1>
+
+  <div class="navigation"> <!--navigation for the other pages -->
+    <ul>
+        <ul class="dropdown"> <!--dropdown for the knots and jewelry page -->
+          <li> <a href="index.html"> Knots </a></li>
+          <li> <a href="Jewelry.html"> Jewelry </a></li>
+        </ul>
+      </li>
+      </ul>
+    </div>
   <div  class = "Square knot belts">
     <img id ="belt 12" src ="Images/squareKnotBelt12.png" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
     <img id ="belt 16" src="Images/squareKnotBelt16.png" alt= "squareKnotBelt">
@@ -49,3 +59,6 @@
   <p><strong> The bell rope is a necessary ancillary to the ship's bell, long considered the "heart of a ship". The bell rope is a symbol of pride in the ship taken by the crew. We offer 20" and 10" bell ropes created to be durable and functional.
     For product pricing and information please contact me here. </strong></p>
   </div>
+</body>
+
+</html>
