--- a/Knots.html
+++ b/Knots.html
@@ -12,7 +12,7 @@
   <div class="navigation"> <!--navigation for the other pages -->
     <ul>
         <ul class="dropdown"> <!--dropdown for the knots and jewelry page -->
-          <li> <a href="index.html"> Knots </a></li>
+          <li> <a href="index.html"> Home </a></li>
           <li> <a href="Jewelry.html"> Jewelry </a></li>
         </ul>
       </li>
