--- a/jewelry.html
+++ b/jewelry.html
@@ -16,6 +16,14 @@
           </ul>
         </ul>
       </div>
+<p></strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
+  To discuss product pricing and specifics contact me here."
+<div class="images">
+  <img id="earringsflat1" src="Images/earring1" alt="earing">
+  <img id="earringsround1" src="Images/earring1" alt="earing">
+  <img id="necklace" src="Images/necklace" alt="necklace">
+  <img id="wristlet" src="Images/wristlet" alt="necklace">
+  <img id="cuffink" src="Images/cufflink" alt="cufflink">
 
 
   </body>
