Images added to image folder, in index.html

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
       <div class = "images"> <!--images for the first page-->
         <img id="ownerpic" src="Images/ownerPic.png" alt="maker">
-        <img id=""
-
-
-
+        <img id="pouch" src="Images/pouch.png" alt="pouch">
+        <img id="workstation" src="Images/workStation.png" alt="workstation">
+        <img id="stairs" src="Images/stairs.png" alt="stairs">
+        </div>
+        
 
   </body>
   </html>
