--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
             </ul>
           </li>
           </ul>
+      </div>
+
+      <div class = "images"> <!--images for the first page-->
+        <img id="ownerpic" src="Images/ownerPic.png" alt="maker">
+        <img id="pouch" src="Images/pouch.png" alt="pouch">
+        <img id="workstation" src="Images/workStation.png" alt="workstation">
+        <img id="stairs" src="Images/stairs.png" alt="stairs">
         </div>
-<div class = "images"> <!--images for the first page-->
-
-
 
 
   </body>
