lanyard images added to folder

--- a/Knots.html
+++ b/Knots.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class= "Boatswain's Lanyards">
-    <img id="lanyard formal wear" src="Images/formalLanyead" alt="lanyard">
+    <img id="lanyard formal wear" src="Images/formalLanyard" alt="lanyard">
     <img id="lanyard chief jimmy wear" src="Images/chiefJimmy" alt="lanyard">
     <img id="plain lanyard" src="Images/plainLanyard" alt="lanyard">
   <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call was used aboard ship. We offer three different types; formal wear lanyards, chief-jimmy lanyards, and plain lanyards.
