tags closed in jewelry.html, ewelry pics added

--- a/jewelry.html
+++ b/jewelry.html
@@ -16,15 +16,16 @@
           </ul>
         </ul>
       </div>
-<p></strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
-  To discuss product pricing and specifics contact me here."
-<div class="images">
-  <img id="earringsflat1" src="Images/earring1" alt="earing">
-  <img id="earringsround1" src="Images/earring1" alt="earing">
-  <img id="necklace" src="Images/necklace" alt="necklace">
-  <img id="wristlet" src="Images/wristlet" alt="necklace">
-  <img id="cuffink" src="Images/cufflink" alt="cufflink">
+<p><strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
+  To discuss product pricing and specifics contact me here." </strong></p>
 
+<div class="images">
+  <img id="earringsflat1" src="Images/earring1.png" alt="earing">
+  <img id="earringsround1" src="Images/earring2.png" alt="earing">
+  <img id="necklace" src="Images/necklace.png" alt="necklace">
+  <img id="wristlet" src="Images/wristlet.png" alt="necklace">
+  <img id="cuffink" src="Images/cufflink.png" alt="cufflink">
+</div>
 
   </body>
 
