--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header>
+    <header id="indexheader">
       <div class="logo"> <!-- logo for company -->
         <h1> Frayed Knot Arts </h1> <!--use font instead of logo for title-->
         <p><strong> Welcome, all! Thank you for stopping by to look over the hand crafted products I have been making on and off for about fifty five years. Initially, I was taught how to make knots by a Sailor in my Navy days and have now taken it up as a full-time business. We are located and work out of Seymour, Tennessee.
