--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
           </ul>
       </div>
 
-      <div class = "row"> <!--images for the first page-->
-        <div class="column">
+      <div class = "images"> <!--images for the first page-->
+
         <img id="ownerpic" src="Images/ownerPic.png" alt="maker">
         <img id="pouch" src="Images/pouch.png" alt="pouch">
-      </div>
-    <div class="column>"
+
       <img id="workstation" src="Images/workStation.png" alt="workstation">
       <img id="stairs" src="Images/stairs.png" alt="stairs">
       </div>
-</div>
+
   </body>
   </html>
