--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <ul id="ul1">
         <li><a href="index.html"> Home </a></li>
         <li> <a href="Knots.html"> Knots </a></li>
-        <li> <a href="Jewelry.html"> Jewelry </a></li>
+        <li><a href="Jewelry.html"> Jewelry </a></li>
       </ul>
     </div>
-    
+
     <header>
 
       <div class="logo"> <!-- logo for company -->
@@ -29,13 +29,21 @@
 
 
       <div class = "images"> <!--images for the first page-->
-
+        <div class="imageB">
         <img id="ownerpic" src="Images/ownerPic.png" alt="maker">
-        <img id="pouch" src="Images/pouch.png" alt="pouch">
+        </div>
 
+        <div class="imageC">
+        <img id="pouch" src="Images/pouch.png" alt="pouch">
+        </div>
+
+      <div class=imageD">
       <img id="workstation" src="Images/workStation.png" alt="workstation">
-      <img id="stairs" src="Images/stairs.png" alt="stairs">
       </div>
 
+      <div class="imageA">
+      <img id="stairs" src="Images/stairs.png" alt="stairs">
+      </div>
+</div>
   </body>
   </html>
