--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <div class="navigation"> <!--navigation for the other pages -->
       <ul id="ul1">
-        <li><a href="index.html"> Home </a></li>
-        <li> <a href="Knots.html"> Knots </a></li>
-        <li><a href="Jewelry.html"> Jewelry </a></li>
+        <a href="index.html"> Home </a>
+        <a href="Knots.html"> Knots </a>
+        <a href="Jewelry.html"> Jewelry </a>
       </ul>
     </div>
 
