--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <div class="navigation"> <!--navigation for the other pages -->
       <ul id="ul1">
-        <a id=a1 href="index.html"> Home </a>
-        <a id=a1 href="Knots.html"> Knots </a>
-        <a id=a1 href="Jewelry.html"> Jewelry </a>
+        <a id="a1" href="index.html"> Home </a>
+        <a id="a1" href="Knots.html"> Knots </a>
+        <a id="a1" href="Jewelry.html"> Jewelry </a>
       </ul>
     </div>
 
