--- a/Jewelry.html
+++ b/Jewelry.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title> Jewelry</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+       <link rel="stylesheet" type="text/css" href="css/jewelryStyle.css">
   </head>
 
   <body>
