--- a/Jewelry.html
+++ b/Jewelry.html
@@ -9,7 +9,7 @@
   <body>
 
     <h1> Jewelry</h1>
-    <div class="navigation"> <!--navigation for the other pages -->
+    <div class="Jewlerynavigation"> <!--navigation for the other pages -->
       <ul>
             <li> <a href="index.html"> Home </a></li>
             <li> <a href="Jewelry.html"> Jewelry </a></li>
