--- a/Jewelry.html
+++ b/Jewelry.html
@@ -19,11 +19,26 @@
   To discuss product pricing and specifics contact me here." </strong></p>
 
 <div class="images">
-  <img id="earringsflat1" src="Images/earring1.png" alt="earing">
-  <img id="earringsround1" src="Images/earring2.png" alt="earing">
-  <img id="necklace" src="Images/necklace.png" alt="necklace">
-  <img id="wristlet" src="Images/wristlet.png" alt="necklace">
-  <img id="cuffink" src="Images/cufflink.png" alt="cufflink">
+<div class="earringsflat1">
+  <img src="Images/earring1.png" alt="earing">
+</div>
+
+<div class="earringsround1">
+  <img src="Images/earring2.png" alt="earing">
+</div>
+
+<div class="necklace">
+  <img src="Images/necklace.png" alt="necklace">
+</div>
+
+<div class="wristlet">
+  <img src="Images/wristlet.png" alt="necklace">
+</div>
+
+<div class="cufflink">
+  <img src="Images/cufflink.png" alt="cufflink">
+</div>
+
 </div>
 
   </body>
