.png repaced with .jpg

--- a/Jewelry.html
+++ b/Jewelry.html
@@ -21,23 +21,23 @@
 <div class="images">
 
 <div class="earringsflat1">
-  <img src="Images/earring1.png" alt="earing">
+  <img src="Images/earring1.jpg" alt="earing">
 </div>
 
 <div class="earringsround1">
-  <img src="Images/earring2.png" alt="earing">
+  <img src="Images/earring2.jpg" alt="earing">
 </div>
 
 <div class="necklace">
-  <img src="Images/necklace.png" alt="necklace">
+  <img src="Images/necklace.jpg" alt="necklace">
 </div>
 
 <div class="wristlet">
-  <img src="Images/wristlet.png" alt="necklace">
+  <img src="Images/wristlet.jpg" alt="necklace">
 </div>
 
 <div class="cufflink">
-  <img src="Images/cufflink.png" alt="cufflink">
+  <img src="Images/cufflink.jpg" alt="cufflink">
 </div>
 
 </div>
