--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 
       <div class = "images"> <!--images for the first page-->
         <div class="imageB">
-        <img id="ownerpic" src="Images/ownerPic.png" alt="maker">
+        <img id="ownerpic" src="Images/OwnerPic.jpg" alt="maker">
         </div>
 
         <div class="imageC">
-        <img id="pouch" src="Images/pouch.png" alt="pouch">
+        <img id="pouch" src="Images/pouch.jpg" alt="pouch">
         </div>
 
       <div class=imageD">
-      <img id="workstation" src="Images/workStation.png" alt="workstation">
+      <img id="workstation" src="Images/workStation.jpg" alt="workstation">
       </div>
 
       <div class="imageA">
-      <img id="stairs" src="Images/stairs.png" alt="stairs">
+      <img id="stairs" src="Images/stairs.jpg" alt="stairs">
       </div>
 </div>
   </body>
