--- a/Jewelry.html
+++ b/Jewelry.html
@@ -10,34 +10,32 @@
 
     <h1> Jewelry</h1>
     <div class="Jewelrynavigation"> <!--navigation for the other pages -->
-      <a class="active" href="#home>"Jewelry</a>
-             <a href="index.html"> Home </a></li>
-            <a href="Jewelry.html"> Jewelry </a></li>
-
+      <a href="index.html">Home</a>
+      <a href="Jewlery.html">Jewelry</a>
+      <a href="Knots.html">Knots</a>
     </div>
 <p><strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
   To discuss product pricing and specifics contact me here." </strong></p>
 
 <div class="images">
-
 <div class="earringsflat1">
-  <img src="Images/earring1.jpg" alt="earing">
+  <img src="Images/earring1.png" alt="earing">
 </div>
 
 <div class="earringsround1">
-  <img src="Images/earring2.jpg" alt="earing">
+  <img src="Images/earring2.png" alt="earing">
 </div>
 
 <div class="necklace">
-  <img src="Images/necklace.jpg" alt="necklace">
+  <img src="Images/necklace.png" alt="necklace">
 </div>
 
 <div class="wristlet">
-  <img src="Images/wristlet.jpg" alt="necklace">
+  <img src="Images/wristlet.png" alt="necklace">
 </div>
 
 <div class="cufflink">
-  <img src="Images/cufflink.jpg" alt="cufflink">
+  <img src="Images/cufflink.png" alt="cufflink">
 </div>
 
 </div>
