--- a/Knots.html
+++ b/Knots.html
@@ -19,9 +19,9 @@
     </div>
 
   <div  class = "Square knot belts">
-    <img id ="belt 12" src ="Images/squareKnotBelt12.png" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
-    <img id ="belt 16" src="Images/squareKnotBelt16.png" alt= "squareKnotBelt">
-    <img id ="belt 20" src="Images/squareKnotBelt20.png" alt= "squareKnotBelt">
+    <img id ="belt 12" src ="Images/squareKnotBelt12.jpg" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
+    <img id ="belt 16" src="Images/squareKnotBelt16.jpg" alt= "squareKnotBelt">
+    <img id ="belt 20" src="Images/squareKnotBelt20.jpg" alt= "squareKnotBelt">
     <p><strong> Most commonly square-knot work is used in belts and lanwayds.
       The products can be incredibly fancy or plain depending on taste, but all made with care.
       I make regular 12-line belts of cotton siene and nylon, 16-line belts and larger 20-line belts. For pricing and more sizing information please contact me here.
@@ -31,32 +31,32 @@
   </div>
 
   <div class= "Boatswain's Lanyards">
-    <img id="lanyard formal wear" src="Images/formalLanyard.png" alt="lanyard">
-    <img id="lanyard chief jimmy wear" src="Images/chiefJimmy.png" alt="lanyard">
-    <img id="plain lanyard" src="Images/plainLanyard.png" alt="lanyard">
+    <img id="lanyard formal wear" src="Images/formalLanyard.jpg" alt="lanyard">
+    <img id="lanyard chief jimmy wear" src="Images/chiefJimmy.jpg" alt="lanyard">
+    <img id="plain lanyard" src="Images/plainLanyard.jpg" alt="lanyard">
   <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call was used aboard ship. We offer three different types; formal wear lanyards, chief-jimmy lanyards, and plain lanyards.
     These lanyards can be made as simple or elaborate, to know more about pricing and product information please contact me here.
     </strong></p>
 </div>
 
 <div  class= "Keychains and Pouches">
-  <img id= "keychain" src="Images/keychain.png" alt="keychain">
-  <img id= "pouches" src="Images/pouches.png" alt="keychain">
+  <img id= "keychain" src="Images/keychain.jpg" alt="keychain">
+  <img id= "pouches" src="Images/pouches.jpg" alt="keychain">
   <p><strong> Keychains, Knife Lanyards, and Pouches are also available for purchase. Utilizing cotton laid line and polycover/nylon cover line products with superior strength are produced. Due to the color of the product use they can get dirty easily, but throwing the product in a sock in the washer and dryer will clean it right up!
     The products can be costumized in length and decoration based on buyer preference, to discuss product pricing and specifics contact me here. </strong></p>
   </div>
 
 <div class ="wheels">
-  <img id="wheel1" src="Images/wheel1.png" alt="wheel">
-  <img id="wheel2" src="Images/wheel2.png" alt="wheel">
+  <img id="wheel1" src="Images/wheel1.jpg" alt="wheel">
+  <img id="wheel2" src="Images/wheel2.jpg" alt="wheel">
   <p><strong> The tradition of coxcombing your helm is an old one, orginally developed to protect the wood from salt and sun on wooden wheels, it is continued on today. Not only does it help with slippery wheels, but can also serve as a decorative feature to enhance the appearance of the cockpit. The wheel size I typically use us 15" destroyer style wheel, but custom sizes can be recommended. I do not work with 32 or 40 inch wheels as they are too pricey!
     I am available to travel to your location to meet you at your wheel. For product pricing and information please contact me here.
   </strong></p>
 </div>
 
 <div class= "Bellropes">
-  <img id="20inchBellRope" src="Images/20inBellRope.png" alt="bellrope">
-  <img id="10inchBellRope" src="Images/10inBellRope.png" alt="bellrope">
+  <img id="20inchBellRope" src="Images/20inBellRope.jpg" alt="bellrope">
+  <img id="10inchBellRope" src="Images/10inBellRope.jpg" alt="bellrope">
   <p><strong> The bell rope is a necessary ancillary to the ship's bell, long considered the "heart of a ship". The bell rope is a symbol of pride in the ship taken by the crew. We offer 20" and 10" bell ropes created to be durable and functional.
     For product pricing and information please contact me here. </strong></p>
 </div>
