navigation bar error corrected

--- a/Jewelry.html
+++ b/Jewelry.html
@@ -9,12 +9,13 @@
   <body>
 
     <h1> Jewelry</h1>
-    <div class="Jewelrynavigation"> <!--navigation for the other pages -->
-      <a href
-      <a href="index.html">Home</a>
-      <a href="Jewlery.html">Jewelry</a>
-      <a href="Knots.html">Knots</a>
+    <div class="  Jewelrynavigation"> <!--navigation for the other pages -->
+        <a id="a1" href="index.html"> Home </a>
+        <a id="a1" href="Knots.html"> Knots </a>
+        <a id="a1" href="Jewelry.html"> Jewelry </a>
+
     </div>
+
 <p><strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
   To discuss product pricing and specifics contact me here." </strong></p>
 
