--- a/Knots.html
+++ b/Knots.html
@@ -10,12 +10,11 @@
   <h1> Knots and Other Products </h1>
 
   <div class="navigation"> <!--navigation for the other pages -->
-    <ul>
-        <ul class="dropdown"> <!--dropdown for the knots and jewelry page -->
-          <li> <a href="index.html"> Home </a></li>
-          <li> <a href="Jewelry.html"> Jewelry </a></li>
-        </ul>
-      </ul>
+
+        <a id="a1" href="index.html"> Home </a>
+        <a id="a1" href="Knots.html"> Knots </a>
+        <a id="a1" href="Jewelry.html"> Jewelry </a>
+
     </div>
 
   <div  class = "Square knot belts">
