--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
 
-    <div class="navigation"> <!--navigation for the other pages -->
+    <div class="Indexnavigation"> <!--navigation for the other pages -->
         <a id="a1" href="index.html"> Home </a>
         <a id="a1" href="Knots.html"> Knots </a>
         <a id="a1" href="Jewelry.html"> Jewelry </a>
