knot navigation standardized

--- a/Knots.html
+++ b/Knots.html
@@ -9,7 +9,7 @@
 
   <h1> Knots and Other Products </h1>
 
-  <div class="navigation"> <!--navigation for the other pages -->
+  <div class="Knotavigation"> <!--navigation for the other pages -->
 
         <a id="a1" href="index.html"> Home </a>
         <a id="a1" href="Knots.html"> Knots </a>
