css linked to knots

--- a/Knots.html
+++ b/Knots.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title> Knots and Other Products </title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/knotStyle.css">
   </head>
 
 <body>
