--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img id="pouch" src="Images/pouch.jpg" alt="pouch">
         </div>
 
-      <div class=imageD">
+      <div class="imageD">
       <img id="workstation" src="Images/workStation.jpg" alt="workstation">
       </div>
 
