css error removed

--- a/Jewelry.html
+++ b/Jewelry.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title> Jewelry</title>
@@ -11,8 +12,8 @@
     <h1> Jewelry</h1>
     <div class="  Jewelrynavigation"> <!--navigation for the other pages -->
         <a id="a1" href="index.html"> Home </a>
-        <a id="a1" href="Knots.html"> Knots </a>
-        <a id="a1" href="Jewelry.html"> Jewelry </a>
+        <a id="a2" href="Knots.html"> Knots </a>
+        <a id="a3" href="Jewelry.html"> Jewelry </a>
 
     </div>
 
