--- a/Knots.html
+++ b/Knots.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title> Knots and Other Products </title>
@@ -13,15 +14,15 @@
   <div class="Knotavigation"> <!--navigation for the other pages -->
 
         <a id="a1" href="index.html"> Home </a>
-        <a id="a1" href="Knots.html"> Knots </a>
-        <a id="a1" href="Jewelry.html"> Jewelry </a>
+        <a id="a2" href="Knots.html"> Knots </a>
+        <a id="a3" href="Jewelry.html"> Jewelry </a>
 
     </div>
 
   <div  class = "Square knot belts">
-    <img id ="belt 12" src ="Images/squareKnotBelt12.jpg" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
-    <img id ="belt 16" src="Images/squareKnotBelt16.jpg" alt= "squareKnotBelt">
-    <img id ="belt 20" src="Images/squareKnotBelt20.jpg" alt= "squareKnotBelt">
+    <img id ="belt12" src ="Images/squareKnotBelt12.jpg" alt= "squareKnotBelt"> <!--add images for the three types of belts -->
+    <img id ="belt16" src="Images/squareKnotBelt16.jpg" alt= "squareKnotBelt">
+    <img id ="belt20" src="Images/squareKnotBelt20.jpg" alt= "squareKnotBelt">
     <p><strong> Most commonly square-knot work is used in belts and lanwayds.
       The products can be incredibly fancy or plain depending on taste, but all made with care.
       I make regular 12-line belts of cotton siene and nylon, 16-line belts and larger 20-line belts. For pricing and more sizing information please contact me here.
@@ -31,9 +32,9 @@
   </div>
 
   <div class= "Boatswain's Lanyards">
-    <img id="lanyard formal wear" src="Images/formalLanyard.jpg" alt="lanyard">
-    <img id="lanyard chief jimmy wear" src="Images/chiefJimmy.jpg" alt="lanyard">
-    <img id="plain lanyard" src="Images/plainLanyard.jpg" alt="lanyard">
+    <img id="lanyardformalwear" src="Images/formalLanyard.jpg" alt="lanyard">
+    <img id="lanyardchiefjimmywear" src="Images/chiefJimmy.jpg" alt="lanyard">
+    <img id="plainlanyard" src="Images/plainLanyard.jpg" alt="lanyard">
   <p><strong> The Boatswain's lanyard has been around ever since the first Boatswain's call was used aboard ship. We offer three different types; formal wear lanyards, chief-jimmy lanyards, and plain lanyards.
     These lanyards can be made as simple or elaborate, to know more about pricing and product information please contact me here.
     </strong></p>
