--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title> Frayed Knot Arts </title>
@@ -10,8 +11,8 @@
 <h1> Home </h1>
     <div class="Indexnavigation"> <!--navigation for the other pages -->
         <a id="a1" href="index.html"> Home </a>
-        <a id="a1" href="Knots.html"> Knots </a>
-        <a id="a1" href="Jewelry.html"> Jewelry </a>
+        <a id="a2" href="Knots.html"> Knots </a>
+        <a id="a3" href="Jewelry.html"> Jewelry </a>
 
     </div>
 
@@ -34,7 +35,7 @@
         <img id="pouch" src="Images/pouch.jpg" alt="pouch">
         </div>
 
-      <div class=imageD">
+      <div class="imageD">
       <img id="workstation" src="Images/workStation.jpg" alt="workstation">
       </div>
 
