--- a/jewelry.html
+++ b/jewelry.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Jewelry</title>
+    <title>jewelry</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/jewelryStyle.css">
   </head>
