--- a/jewelry.html
+++ b/jewelry.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>jewelry</title>
+    <title>Jewelry</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/jewelryStyle.css">
   </head>
@@ -12,8 +12,8 @@
     <h1> Jewelry</h1>
     <div class="  Jewelrynavigation"> <!--navigation for the other pages -->
         <a id="a1" href="index.html"> Home </a>
-        <a id="a2" href="Knots.html"> Knots </a>
-        <a id="a3" href="Jewelry.html"> Jewelry </a>
+        <a id="a2" href="knots.html"> Knots </a>
+        <a id="a3" href="jewelry.html"> Jewelry </a>
 
     </div>
 
@@ -22,23 +22,23 @@
 
 <div class="images">
 <div class="earringsflat1">
-  <img src="Images/earring1.jpg" alt="earing">
+  <img src="images/earring1.jpg" alt="earing">
 </div>
 
 <div class="earringsround1">
-  <img src="Images/earring2.jpg" alt="earing">
+  <img src="images/earring2.jpg" alt="earing">
 </div>
 
 <div class="necklace">
-  <img src="Images/necklace.jpg" alt="necklace">
+  <img src="images/necklace.jpg" alt="necklace">
 </div>
 
 <div class="wristlet">
-  <img src="Images/wristlet.jpg" alt="necklace">
+  <img src="images/wristlet.jpg" alt="necklace">
 </div>
 
 <div class="cufflink">
-  <img src="Images/cufflink.jpg" alt="cufflink">
+  <img src="images/cufflink.jpg" alt="cufflink">
 </div>
 
 </div>
