--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h1> Home </h1>
     <div class="Indexnavigation"> <!--navigation for the other pages -->
         <a id="a1" href="index.html"> Home </a>
-        <a id="a2" href="Knots.html"> Knots </a>
-        <a id="a3" href="Jewelry.html"> Jewelry </a>
+        <a id="a2" href="knots.html"> Knots </a>
+        <a id="a3" href="jewelry.html"> Jewelry </a>
 
     </div>
 
@@ -28,19 +28,19 @@
 
       <div class = "images"> <!--images for the first page-->
         <div class="imageB">
-        <img id="ownerpic" src="Images/OwnerPic.jpg" alt="maker">
+        <img id="ownerpic" src="images/OwnerPic.jpg" alt="maker">
         </div>
 
         <div class="imageC">
-        <img id="pouch" src="Images/pouch.jpg" alt="pouch">
+        <img id="pouch" src="images/pouch.jpg" alt="pouch">
         </div>
 
       <div class="imageD">
-      <img id="workstation" src="Images/workStation.jpg" alt="workstation">
+      <img id="workstation" src="images/workStation.jpg" alt="workstation">
       </div>
 
       <div class="imageA">
-      <img id="stairs" src="Images/stairs.jpg" alt="stairs">
+      <img id="stairs" src="images/stairs.jpg" alt="stairs">
       </div>
 </div>
   </body>
