--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class = "images"> <!--images for the first page-->
         <div class="imageB">
-        <img id="ownerpic" src="images/OwnerPic.jpg" alt="maker">
+        <img id="ownerpic" src="images/ownerPic.jpg" alt="maker">
         </div>
 
         <div class="imageC">
