--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a id="a1" href="index.html"> Home </a>
         <a id="a2" href="knots.html"> Knots </a>
         <a id="a3" href="jewelry.html"> Jewelry </a>
+        <a id="a4" href="login.html"> Login </a>
 
     </div>
 
