--- a/login.html
+++ b/login.html
@@ -16,6 +16,22 @@
 <form method="POST" action="#" autocomplete="on">
 <div id="sign">
   <h3>Sign up</h3>
+   <div>
+    <label for="first">
+      First Name 
+    </label>
+  </div>
+  <div>
+    <input type="first" id="first" placeholder="Enter your first name">
+  </div>
+   <div>
+    <label for="second">
+      Secone Name 
+    </label>
+  </div>
+  <div>
+    <input type="second" id="second" placeholder="Enter your second name">
+  </div>
   <div>
     <label for="email">
       E-mail 
