--- a/index.html
+++ b/index.html
@@ -4,33 +4,39 @@
     <meta charset="utf-8">
     <title> Frayed Knot Arts </title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-     <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
   </head>
 
-  <body>
-<h1> Home </h1>
-    <div class="Indexnavigation"> <!--navigation for the other pages -->
-        <a id="a1" href="index.html"> Home </a>
-        <a id="a2" href="knots.html"> Knots </a>
-        <a id="a3" href="jewelry.html"> Jewelry </a>
-        <a id="a4" href="login.html"> Login </a>
-    </div>
-        <p><strong> Welcome, all! Thank you for stopping by to look over the hand crafted products I have been making on and off for about fifty five years. Initially, I was taught how to make knots by a Sailor in my Navy days and have now taken it up as a full-time business. We are located and work out of Seymour, Tennessee.
-          I make belts, lanywards, wheel-coverings, tiller wraps, hand-rail wraps, belloropes, instrumnet staps...anything you can do with a pieceo of line, I can make. We also make jewelry for those who want to 'knock-em-dead' at the yatch club or marina. If you are interested in purchasing products please contact me directly to discuss product specifics and pricing.
-          Feel free to click around to the knots and jewelry pages to see some of the current products we offer. </strong></p>
-   <div class = "images"> <!--images for the first page-->
-        <div class="imageB">
-        <img id="ownerpic" src="images/ownerPic.jpg" alt="maker">
-        </div>
-        <div class="imageC">
-        <img id="pouch" src="images/pouch.jpg" alt="pouch">
-        </div>
-      <div class="imageD">
-      <img id="workstation" src="images/workStation.jpg" alt="workstation">
-      </div>
-      <div class="imageA">
-      <img id="stairs" src="images/stairs.jpg" alt="stairs">
-      </div>
+<body>
+  <h1> Home </h1>
+  <div class="Indexnavigation"> <!--navigation for the other pages -->
+    <ul>
+      <li> <a id="a1" href="index.html"> Home </li> </a>
+      <li> <a id="a2" href="knots.html"> Knots </li> </a>
+      <li> <a id="a3" href="jewelry.html"> Jewelry </li> </a>
+      <li> <a id="a4" href="login.html"> Login </li> </a>
+    <ul>
   </div>
-  </body>
-  </html>
+  <p>
+    <strong> Welcome, all! Thank you for stopping by to look over the hand crafted products I have been making on and off for about fifty five years. Initially, I was taught how to make knots by a Sailor in my Navy days and have now taken it up as a full-time business. We are located and work out of Seymour, Tennessee.
+          I make belts, lanywards, wheel-coverings, tiller wraps, hand-rail wraps, belloropes, instrumnet staps...anything you can do with a pieceo of line, I can make. We also make jewelry for those who want to 'knock-em-dead' at the yatch club or marina. If you are interested in purchasing products please contact me directly to discuss product specifics and pricing.
+          Feel free to click around to the knots and jewelry pages to see some of the current products we offer.
+    </strong>
+  </p>
+  <div class = "images"> <!--images for the first page-->
+    <div class="imageB">
+      <img id="ownerpic" src="images/ownerPic.jpg" alt="maker">
+    </div>
+    <div class="imageC">
+      <img id="pouch" src="images/pouch.jpg" alt="pouch">
+    </div>
+    <div class="imageD">
+      <img id="workstation" src="images/workStation.jpg" alt="workstation">
+    </div>
+    <div class="imageA">
+      <img id="stairs" src="images/stairs.jpg" alt="stairs">
+    </div>
+  </div>
+</body>
+</html>
