--- a/jewelry.html
+++ b/jewelry.html
@@ -4,34 +4,41 @@
     <meta charset="utf-8">
     <title>Jewelry</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/jewelryStyle.css">
   </head>
   
-  <body>
-    <h1> Jewelry</h1>
-    <div class="  Jewelrynavigation"> <!--navigation for the other pages -->
-        <a id="a1" href="index.html"> Home </a>
-        <a id="a2" href="knots.html"> Knots </a>
-        <a id="a3" href="jewelry.html"> Jewelry </a>
+<body>
+  <h1> Jewelry</h1>
+  <div class="  Jewelrynavigation"> <!--navigation for the other pages -->
+    <ul>
+      <li> <a id="a1" href="index.html"> Home </li> </a>
+      <li> <a id="a2" href="knots.html"> Knots </li> </a>
+      <li> <a id="a3" href="jewelry.html"> Jewelry </li> </a>
+      <li> <a id="a4" href="login.html"> Login </li> </a>
+    <ul>
+  </div>
+  <p>
+    <strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
+  To discuss product pricing and specifics contact me here."
+    </strong>
+  </p>
+  <div class="images">
+    <div class="earringsflat1">
+      <img src="images/earring1.jpg" alt="earing">
     </div>
-<p><strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
-  To discuss product pricing and specifics contact me here." </strong></p>
-<div class="images">
-<div class="earringsflat1">
-  <img src="images/earring1.jpg" alt="earing">
-</div>
-<div class="earringsround1">
-  <img src="images/earring2.jpg" alt="earing">
-</div>
-<div class="necklace">
-  <img src="images/necklace.jpg" alt="necklace">
-</div>
-<div class="wristlet">
-  <img src="images/wristlet.jpg" alt="necklace">
-</div>
-<div class="cufflink">
-  <img src="images/cufflink.jpg" alt="cufflink">
-</div>
-</div>
-  </body>
+    <div class="earringsround1">
+      <img src="images/earring2.jpg" alt="earing">
+    </div>
+    <div class="necklace">
+      <img src="images/necklace.jpg" alt="necklace">
+    </div>
+    <div class="wristlet">
+      <img src="images/wristlet.jpg" alt="necklace">
+    </div>
+    <div class="cufflink">
+      <img src="images/cufflink.jpg" alt="cufflink">
+    </div>
+  </div>
+</body>
 </html>
