--- a/login.html
+++ b/login.html
@@ -11,14 +11,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <script src="script.js" async> </script>
 </head>
-	
+
 <body>
 <form method="POST" action="#" autocomplete="on">
 <div id="sign">
   <h3>Sign up</h3>
    <div>
     <label for="first">
-      First Name 
+      First Name
     </label>
   </div>
   <div>
@@ -26,7 +26,7 @@
   </div>
    <div>
     <label for="second">
-      Secone Name 
+      Secone Name
     </label>
   </div>
   <div>
@@ -34,15 +34,15 @@
   </div>
   <div>
     <label for="email">
-      E-mail 
+      E-mail
     </label>
   </div>
   <div>
-    <input type="email" id="email" placeholder="Enter your eamil">
+    <input type="email" id="email" placeholder="Enter your email">
   </div>
   <div>
    <label for="phone">
-    Phone number 
+    Phone number
    </label>
   </div>
   <div>
