extra " removed, typo

--- a/jewelry.html
+++ b/jewelry.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/jewelryStyle.css">
   </head>
-  
+
 <body>
   <h1> Jewelry</h1>
   <div class="  Jewelrynavigation"> <!--navigation for the other pages -->
@@ -20,7 +20,7 @@
   </div>
   <p>
     <strong> Handcrafted from fine-cast iron line in a natural ecru color, these are varnished to impart solidity and mounted on gold-plated "shepherd's crook" findings. Along with earrings we make necklaces, wristlets, cufflinks, and anklets. All jewelry colors and size can be customized.
-  To discuss product pricing and specifics contact me here."
+  To discuss product pricing and specifics contact me here.
     </strong>
   </p>
   <div class="images">
