--- a/index.html
+++ b/index.html
@@ -18,25 +18,41 @@
       <li> <a id="a4" href="login.html"> Login </li> </a>
     <ul>
   </div>
-  <p id="p1">
+
+  <p>
     <strong> Welcome, all! Thank you for stopping by to look over the hand crafted products I have been making on and off for about fifty five years. Initially, I was taught how to make knots by a Sailor in my Navy days and have now taken it up as a full-time business. We are located and work out of Seymour, Tennessee.
           I make belts, lanywards, wheel-coverings, tiller wraps, hand-rail wraps, belloropes, instrumnet staps...anything you can do with a pieceo of line, I can make. We also make jewelry for those who want to 'knock-em-dead' at the yatch club or marina. If you are interested in purchasing products please contact me directly to discuss product specifics and pricing.
           Feel free to click around to the knots and jewelry pages to see some of the current products we offer.
     </strong>
   </p>
-  <div class = "images"> <!--images for the first page-->
-    <div class="imageB">
-      <img id="ownerpic" src="images/ownerPic.jpg" alt="maker">
-    </div>
-    <div class="imageC">
-      <img id="pouch" src="images/pouch.jpg" alt="pouch">
-    </div>
-    <div class="imageD">
-      <img id="workstation" src="images/workStation.jpg" alt="workstation">
-    </div>
-    <div class="imageA">
-      <img id="stairs" src="images/stairs.jpg" alt="stairs">
-    </div>
+
+  <div class="HomePageImages">
+    <a target="_blank" href="images/ownerPic.jpg">
+      <img src="images/ownerPic.jpg" alt="Owner">
+    </a>
+    <div class="desc">Add a description of the image here</div>
   </div>
+
+  <div class="HomePageImages">
+    <a target="_blank" href="images/pouch.jpg">
+      <img src="images/pouch.jpg" alt="Pouch">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+
+  <div class="HomePageImages">
+    <a target="_blank" href="images/workStation.jpg">
+      <img src="images/workStation.jpg" alt="workstation">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+
+  <div class="HomePageImages">
+    <a target="_blank" href="images/stairs.jpg">
+      <img src="images/stairs.jpg" alt="stairs">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+
 </body>
 </html>
