image size specified for images

--- a/index.html
+++ b/index.html
@@ -28,30 +28,30 @@
 
   <div class="HomePageImages">
     <a target="_blank" href="images/ownerPic.jpg">
-      <img src="images/ownerPic.jpg" alt="Owner">
+      <img id="HPimage" src="images/ownerPic.jpg" alt="Owner">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="description">Add a description of the image here</div>
   </div>
 
   <div class="HomePageImages">
     <a target="_blank" href="images/pouch.jpg">
-      <img src="images/pouch.jpg" alt="Pouch">
+      <img id="HPimage" src="images/pouch.jpg" alt="Pouch">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="description">Add a description of the image here</div>
   </div>
 
   <div class="HomePageImages">
     <a target="_blank" href="images/workStation.jpg">
-      <img src="images/workStation.jpg" alt="workstation">
+      <img id="HPimage" src="images/workStation.jpg" alt="workstation">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="description">Add a description of the image here</div>
   </div>
 
   <div class="HomePageImages">
     <a target="_blank" href="images/stairs.jpg">
-      <img src="images/stairs.jpg" alt="stairs">
+      <img id="HPimage" src="images/stairs.jpg" alt="stairs">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="description">Add a description of the image here</div>
   </div>
 
 </body>
