--- a/index.html
+++ b/index.html
@@ -26,33 +26,43 @@
     </strong>
   </p>
 
-  <div class="HomePageImages">
-    <a target="_blank" href="images/ownerPic.jpg">
-      <img id="HPimage" src="images/ownerPic.jpg" alt="Owner">
+  <div class="responsive">
+  <div class="images">
+    <a target="_blank" href="images/ownerpic.jpg">
+      <img src="images/ownerpic.jpg" alt="owner">
     </a>
-    <div class="description">Add a description of the image here</div>
+    <div class="desc">Add a description of the image here</div>
   </div>
+</div>
 
-  <div class="HomePageImages">
+
+  <div class="responsive">
+  <div class="images">
     <a target="_blank" href="images/pouch.jpg">
-      <img id="HPimage" src="images/pouch.jpg" alt="Pouch">
+      <img src="images/pouch.jpg" alt="pouch">
     </a>
-    <div class="description">Add a description of the image here</div>
+    <div class="desc">Add a description of the image here</div>
   </div>
+</div>
 
-  <div class="HomePageImages">
-    <a target="_blank" href="images/workStation.jpg">
-      <img id="HPimage" src="images/workStation.jpg" alt="workstation">
+
+<div class="responsive">
+  <div class="images">
+    <a target="_blank" href="images/workstation.jpg">
+      <img src="images/workstation.jpg" alt="workstation">
     </a>
-    <div class="description">Add a description of the image here</div>
+    <div class="desc">Add a description of the image here</div>
   </div>
+</div>
 
-  <div class="HomePageImages">
+<div class="responsive">
+  <div class="images">
     <a target="_blank" href="images/stairs.jpg">
-      <img id="HPimage" src="images/stairs.jpg" alt="stairs">
+      <img src="images/stairs.jpg" alt="stairs">
     </a>
-    <div class="description">Add a description of the image here</div>
+    <div class="desc">Add a description of the image here</div>
   </div>
+</div>
 
 </body>
 </html>
