--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li> <a id="a4" href="login.html"> Login </li> </a>
     <ul>
   </div>
-
+<div class="border"
   <p>
     <strong> Welcome, all! Thank you for stopping by to look over the hand crafted products I have been making on and off for about fifty five years. Initially, I was taught how to make knots by a Sailor in my Navy days and have now taken it up as a full-time business. We are located and work out of Seymour, Tennessee.
           I make belts, lanywards, wheel-coverings, tiller wraps, hand-rail wraps, belloropes, instrumnet staps...anything you can do with a pieceo of line, I can make. We also make jewelry for those who want to 'knock-em-dead' at the yatch club or marina. If you are interested in purchasing products please contact me directly to discuss product specifics and pricing.
@@ -63,6 +63,6 @@
     <div class="desc">Add a description of the image here</div>
   </div>
 </div>
-
+</div>
 </body>
 </html>
