descriptions added to images for home page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a target="_blank" href="images/ownerpic.jpg">
       <img src="images/ownerpic.jpg" alt="owner">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">The owner and maker</div>
   </div>
 </div>
 
@@ -41,7 +41,7 @@
     <a target="_blank" href="images/pouch.jpg">
       <img src="images/pouch.jpg" alt="pouch">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Handcrafted pouch</div>
   </div>
 </div>
 
@@ -51,7 +51,7 @@
     <a target="_blank" href="images/workstation.jpg">
       <img src="images/workstation.jpg" alt="workstation">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">One of the many workstations we use to handcraft goods</div>
   </div>
 </div>
 
@@ -60,7 +60,7 @@
     <a target="_blank" href="images/stairs.jpg">
       <img src="images/stairs.jpg" alt="stairs">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Hand Coxcombed stairs</div>
   </div>
 </div>
 </div>
