color changed for nav bar, jewelry images enclosed in div responsive, css added

--- a/jewelry.html
+++ b/jewelry.html
@@ -23,21 +23,54 @@
   To discuss product pricing and specifics contact me here.
     </strong>
   </p>
-    <div class="images">
-      <img src="images/earring1.jpg" alt="earing">
-    </div>
-    <div class="images">
-      <img src="images/earring2.jpg" alt="earing">
-    </div>
-    <div class="images">
-      <img src="images/necklace.jpg" alt="necklace">
-    </div>
-    <div class="images">
-      <img src="images/wristlet.jpg" alt="necklace">
-    </div>
-    <div class="images">
-      <img src="images/cufflink.jpg" alt="cufflink">
-    </div>
+
+
+  <div class="responsive">
+  <div class="images">
+    <a target="_blank" href="images/earring1.jpg">
+      <img src="images/earring1.jpg" alt="earring2">
+    </a>
+    <div class="desc">The owner and maker</div>
+  </div>
+</div>
+
+
+<div class="responsive">
+<div class="images">
+  <a target="_blank" href="images/earring2.jpg">
+    <img src="images/earring2.jpg" alt="earring2">
+  </a>
+  <div class="desc">The owner and maker</div>
+</div>
+</div>
+
+<div class="responsive">
+<div class="images">
+  <a target="_blank" href="images/necklace.jpg">
+    <img src="images/necklace.jpg" alt="necklace">
+  </a>
+  <div class="desc">The owner and maker</div>
+</div>
+</div>
+
+<div class="responsive">
+<div class="images">
+  <a target="_blank" href="images/wristlet.jpg">
+    <img src="images/wristlet.jpg" alt="owner">
+  </a>
+  <div class="desc">The owner and maker</div>
+</div>
+</div>
+
+<div class="responsive">
+<div class="images">
+  <a target="_blank" href="images/cufflink.jpg">
+    <img src="images/cufflink.jpg" alt="owner">
+  </a>
+  <div class="desc">The owner and maker</div>
+</div>
+</div>
+
 
 </body>
 </html>
